change css links

--- a/contact/mobile.css
+++ b/contact/mobile.css
@@ -137,7 +137,7 @@ opacity:0.5 !important;
 background-color:rgb(28,35,48) !important}
 *#dm *.dmBody div.u_1280293749{
 background-repeat:no-repeat !important;
-background-image:url(https://monopolyglitch.store/ignite/Landing%20Page.svg) !important;
+background-image:url(https://cdn.jsdelivr.net/gh/mohamediysa/ignite/Landing%20Page.svg) !important;
 box-shadow:none !important;
 -moz-box-shadow:none !important;
 -webkit-box-shadow:none !important;
